--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,25 @@
 				<artifactId>mule-maven-plugin</artifactId>
 				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
+				<configuration>
+
+				   <cloudHubDeployment>
+				    <uri>https://anypoint.mulesoft.com</uri>
+				    <muleVersion>${mule.version}</muleVersion>
+				    <username>${anypoint.username}</username>
+				    <password>${anypoint.password}</password>
+				    <applicationName>${appname}</applicationName>
+				    <environment>${env}</environment>
+					<workerType>${vCore}</workerType>
+					<objectstoreV2>true</objectstoreV2>
+				    <businessGroup>${business}</businessGroup>
+					<workers>${workers}</workers>
+				  </cloudHubDeployment>
+				
+			   </configuration>
+								
+				
+				
 			</plugin>
 		</plugins>
 	</build>
